--- a/src/cv.html
+++ b/src/cv.html
@@ -150,12 +150,6 @@ Advisor: Lloyd N. Trefethen
 A.B. in Mathematics
 </div>
 
-<h2 class="main">Awards</h2>
-
-<div class="main">MIT EECS Great Educators Fellowship, 2015</div>
-
-<div class="main">NSF Graduate Research Fellowship, 1992</div>
-
 <h2 class="main">Employment</h2>
 
 <div class="index">2022-current</div>
@@ -173,15 +167,17 @@ A.B. in Mathematics
 <strong>Research Assistant.</strong> Antonio Torralba lab, MIT CSAIL.
 </div>
 
-<div class="index">2013-2015</div>
+<div class="index">2013-current</div>
 <div class="main item">
 <strong>Pencil Code.</strong>
-<a href="https://pencilcode.net/">pencilcode.net</a>.
-With Google and open-source contributors.
+<a href="https://pencilcode.net/">pencilcode.net</a>. Director.
+Collaborating with Google CS First, Code.org, and open-source contributors.
 <ul>
-<li>Created an educational programming system and curriculum
-for beginners, with 159,000 active accounts and 2,000 users
-every school day.
+<li>Created the team and partnerships that researched, developed, and deploted
+  a novel educational programming system and curriculum for beginners,
+  with 200,000 active accounts and 2,000 users every school day.
+<li>Led open-source community efforts to create block-based programming
+  technology that uniquely bridges block- and text-code learning.
 </ul>
 </div>
 
@@ -262,6 +258,12 @@ features for a network media platform for MSN.
 innovative programming tool project.
 </ul>
 </div>
+
+<h2 class="main">Awards</h2>
+
+<div class="main">MIT EECS Great Educators Fellowship, 2015</div>
+
+<div class="main">NSF Graduate Research Fellowship, 1992</div>
 
 
 <h2 class="main">Peer-Reviewed Publications</h2>
@@ -409,7 +411,7 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
 
 <h2 class="main">Preprints</h2>
 
-<div class="main pub"><strong>David Bau</strong>, Alex Andonian, Audrey Cui, Yeon-Hwan Park, Ali Jahanian, Aude Oliva, Antonio Torralba.  <a href="https://arxiv.org/abs/2103.10951">Paint by Word</a>.  arxiv.org/abs/2103.10951 (2021)</div>
+<div class="main pub">Alex Andonian, Sabrina Osmany, Audrey Cui, Yeon-Hwan Park, Ali Jahanian, Antonio Torralba, <strong>David Bau</strong>.  <a href="https://arxiv.org/abs/2103.10951">Paint by Word</a>.  arxiv.org/abs/2103.10951 (2021)</div>
 
 <h2 class="main">Selected Patents</h2>
 
