--- a/src/cv.html
+++ b/src/cv.html
@@ -171,13 +171,14 @@ A.B. in Mathematics
 <div class="main item">
 <strong>Pencil Code.</strong>
 <a href="https://pencilcode.net/">pencilcode.net</a>. Director.
-Collaborating with Google CS First, Code.org, and open-source contributors.
 <ul>
-<li>Created the team and partnerships that researched, developed, and deploted
+<li>Collaborating with Google CS First, Code.org, and open-source contributors,
+  created the team and partnerships that researched, developed, and deployed
   a novel educational programming system and curriculum for beginners,
-  with 200,000 active accounts and 2,000 users every school day.
+  with more than 200,000 active accounts and 2,000 student users every school day.
 <li>Led open-source community efforts to create block-based programming
-  technology that uniquely bridges block- and text-code learning.
+  technology that uniquely bridges block- and text-code learning, used by
+  Code.org and CS First to reach tens of millions of students.
 </ul>
 </div>
 
