New invited talks.

--- a/src/cv.html
+++ b/src/cv.html
@@ -172,13 +172,13 @@ A.B. in Mathematics
 <strong>Pencil Code.</strong>
 <a href="https://pencilcode.net/">pencilcode.net</a>. Director.
 <ul>
-<li>Collaborating with Google CS First, Code.org, and open-source contributors,
+<li><em>Pencil Code service.</em> Working Google CS First and open-source contributors,
   created the team and partnerships that researched, developed, and deployed
   a novel educational programming system and curriculum for beginners,
-  with more than 200,000 active accounts and 2,000 student users every school day.
-<li>Led open-source community efforts to create block-based programming
-  technology that uniquely bridges block- and text-code learning, used by
-  Code.org and CS First to reach tens of millions of students.
+  used by more than 200,000 students.
+<li><em>Pencil Code block code editor.</em> Led open-source community efforts to create
+  block-based programming technology that uniquely bridges block- and text-code learning,
+  used by Code.org and CS First to reach tens of millions of students.
 </ul>
 </div>
 
@@ -463,6 +463,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 <h2 class="main">Invited Talks</h2>
 
 
+<div class="main pub"><em>AI Safety and the Need for National Deep Inference infrastructure.</em> Invited Talk at the MIT/Harvard AI Safety Retreat, March 2023.</div>
 <div class="main pub"><em>The ROME and MEMIT methods.</em> Invited Talk at the Google ML Research Seminar, January 2023.</div>
 <div class="main pub"><em>AI Alignment, Model Interpretation, and Direct Model Editing.</em> Invited Talk at the Harvard AI Alignment Team, January 2023.</div>
 <div class="main pub"><em>The ROME method and Direct Model Editing.</em> Invited Talk at the AstraZenica ML Research Seminar, January 2023.</div>
