--- a/src/publications.html
+++ b/src/publications.html
@@ -162,73 +162,90 @@ figcaption {
 <h3 class="main">Conference Papers</h3>
 
 <div class="main pub">
-  Kevin Meng, Arnab Sen Sharma, Alex Andonian, Yonatan Belinkov, <b>David Bau</b>. <a href="https://memit.baulab.info/">Mass-Editing Memory in a Transformer.</a> <em>Eleventh International Conference on Learning Representations.</em> <nobr>(ICLR 2023 spotlight)</nobr>.
+  Rohit Gandikota, Joanna Materzy&nacute;ska, Jaden Fiotto-Kaufman, <strong>David Bau</strong>. <a href="https://erasing.baulab.info/">Erasing Concepts from Diffusion Models.</a> <em>Proceedings of the 2023 IEEE International Conference on Computer Vision</em> <nobr>(ICCV 2023)</nobr>.
 </div>
 
 <div class="main pub">
-  Kenneth Li, Aspen K Hopkins, <b>David Bau</b>, Fernanda Vi&eacute;gas, Hanspeter Pfister, Martin Wattenberg.  <a href="https://github.com/likenneth/othello_world">Emergent world representations: Exploring a sequence model trained on a synthetic task.</a> <em>Eleventh International Conference on Learning Representations.</em> <nobr>(ICLR 2023 oral)</nobr>.
+  Kevin Meng, Arnab Sen Sharma, Alex Andonian, Yonatan Belinkov, <strong>David Bau</strong>. <a href="https://memit.baulab.info/">Mass-Editing Memory in a Transformer.</a> <em>Eleventh International Conference on Learning Representations.</em> <nobr>(ICLR 2023 spotlight)</nobr>.
 </div>
 
 <div class="main pub">
-  Kevin Meng, <b>David Bau</b>, Alex Andonian, Yonatan Belinkov. <a href="https://rome.baulab.info/">Locating and Editing Factual Associations in GPT.</a> <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2022)</nobr>.
-</div>
-
-
-<div class="main pub">
-  Sheng-Yu Wang, <b>David Bau</b>, Jun-Yan Zhu.  <a href="https://peterwang512.github.io/GANWarping/">Rewriting Geometric Rules of a GAN</a>. <em>ACM Transactions on Graphics (TOG).</em> <nobr>(SIGGRAPH 2022)</nobr>
+  Kenneth Li, Aspen K Hopkins, <strong>David Bau</strong>, Fernanda Vi&eacute;gas, Hanspeter Pfister, Martin Wattenberg.  <a href="https://github.com/likenneth/othello_world">Emergent world representations: Exploring a sequence model trained on a synthetic task.</a> <em>Eleventh International Conference on Learning Representations.</em> <nobr>(ICLR 2023 oral)</nobr>.
 </div>
 
 <div class="main pub">
-  Joanna Materzynska, Antonio Torralba, <b>David Bau</b>. <a href="https://joaanna.github.io/disentangling_spelling_in_clip/">Disentangling Visual and Written Concepts in CLIP</a>. <em>Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition.</em> <nobr>(CVPR 2022 oral)</nobr>
+  Kevin Meng, <strong>David Bau</strong>, Alex Andonian, Yonatan Belinkov. <a href="https://rome.baulab.info/">Locating and Editing Factual Associations in GPT.</a> <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2022)</nobr>.
 </div>
 
 <div class="main pub">
-  Evan Hernandez, Sarah Schwettmann, <b>David Bau</b>, Teona Bagashvilli, Antonio Torralba, Jacob Andreas. <a href="http://milan.csail.mit.edu/">Natural Language Descriptions of Deep Visual Features</a>. <em>Proceedings of the International Conference on Learning Representations.</em> <nobr>(ICLR 2022)</nobr>
+  Sheng-Yu Wang, <strong>David Bau</strong>, Jun-Yan Zhu.  <a href="https://peterwang512.github.io/GANWarping/">Rewriting Geometric Rules of a GAN</a>. <em>ACM Transactions on Graphics (TOG).</em> <nobr>(SIGGRAPH 2022)</nobr>
 </div>
 
 <div class="main pub">
-  Shibani Santurkar, Dimitris Tsipras, Mahalaxmi Elango, <b>David Bau</b>, Antonio Torralba, and Aleksander Madry. <a href="https://github.com/MadryLab/EditingClassifiers">Editing a classifier by rewriting its prediction rules.</a> <em>Advances in Neural Information Processing Systems 34.</em> <nobr>(NeuIPS 2021)</nobr>
+  Joanna Materzy&nacute;ska, Antonio Torralba, <strong>David Bau</strong>. <a href="https://joaanna.github.io/disentangling_spelling_in_clip/">Disentangling Visual and Written Concepts in CLIP</a>. <em>Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition.</em> <nobr>(CVPR 2022 oral)</nobr>
 </div>
 
 <div class="main pub">
-  Emma Andrews, <b>David Bau</b>, and Jeremiah Blanchard. <a href="https://ieeexplore.ieee.org/document/9576355">From Droplet to Lilypad: Present and Future of Dual-Modality Environments.</a> <em>2021 IEEE Symposium on Visual Languages and Human-Centric Computing.</em> <nobr>(VL/HCC 2021)</nobr>
+  Evan Hernandez, Sarah Schwettmann, <strong>David Bau</strong>, Teona Bagashvilli, Antonio Torralba, Jacob Andreas. <a href="http://milan.csail.mit.edu/">Natural Language Descriptions of Deep Visual Features</a>. <em>Proceedings of the International Conference on Learning Representations.</em> <nobr>(ICLR 2022)</nobr>
 </div>
 
 <div class="main pub">
-  Sarah Schwettmann, Evan Hernandez, <b>David Bau</b>, Samuel Klein, Jacob Andreas, Antonio Torralba. <a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Schwettmann_Toward_a_Visual_Concept_Vocabulary_for_GAN_Latent_Space_ICCV_2021_paper.pdf">Twoard a Visual Concept Vocabulary for GAN Latent Space</a>. <em>Proceedings of the IEEE/CVF International Conference on Computer Vision.</em> <nobr>(ICCV 2021)</nobr>
+  Shibani Santurkar, Dimitris Tsipras, Mahalaxmi Elango, <strong>David Bau</strong>, Antonio Torralba, and Aleksander Madry. <a href="https://github.com/MadryLab/EditingClassifiers">Editing a classifier by rewriting its prediction rules.</a> <em>Advances in Neural Information Processing Systems 34.</em> <nobr>(NeuIPS 2021)</nobr>
 </div>
 
 <div class="main pub">
-  Sheng-Yu Wang, <b>David Bau</b>, and Jun-Yan Zhu. <a href="https://peterwang512.github.io/GANSketching/">Sketch Your Own GAN.</a> <em>Proceedings of the IEEE/CVF International Conference on Computer Vision.</em> <nobr>(ICCV 2021)</nobr>
+  Emma Andrews, <strong>David Bau</strong>, and Jeremiah Blanchard. <a href="https://ieeexplore.ieee.org/document/9576355">From Droplet to Lilypad: Present and Future of Dual-Modality Environments.</a> <em>2021 IEEE Symposium on Visual Languages and Human-Centric Computing.</em> <nobr>(VL/HCC 2021)</nobr>
 </div>
+
 <div class="main pub">
-<b>David Bau</b>, Steven Liu, Tongzhou Wang, Jun-Yan Zhu, and Antonio Torralba. <a href="http://rewriting.csail.mit.edu/">Rewriting a Deep Generative Model.</a>  <em>Proceedings of the European Conference on Computer Vision.</em> <nobr>(ECCV 2020 oral)</nobr>
+  Sarah Schwettmann, Evan Hernandez, <strong>David Bau</strong>, Samuel Klein, Jacob Andreas, Antonio Torralba. <a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Schwettmann_Toward_a_Visual_Concept_Vocabulary_for_GAN_Latent_Space_ICCV_2021_paper.pdf">Toward a Visual Concept Vocabulary for GAN Latent Space</a>. <em>Proceedings of the IEEE/CVF International Conference on Computer Vision.</em> <nobr>(ICCV 2021)</nobr>
 </div>
+
 <div class="main pub">
-Lucy Chai, <b>David Bau</b>, Ser-Nam Lim, and Phillip Isola.  <a href="https://chail.github.io/patch-forensics/">What makes fake images detectable?
+  Sheng-Yu Wang, <strong>David Bau</strong>, and Jun-Yan Zhu. <a href="https://peterwang512.github.io/GANSketching/">Sketch Your Own GAN.</a> <em>Proceedings of the IEEE/CVF International Conference on Computer Vision.</em> <nobr>(ICCV 2021)</nobr>
+</div>
+
+<div class="main pub">
+<strong>David Bau</strong>, Steven Liu, Tongzhou Wang, Jun-Yan Zhu, and Antonio Torralba. <a href="http://rewriting.csail.mit.edu/">Rewriting a Deep Generative Model.</a>  <em>Proceedings of the European Conference on Computer Vision.</em> <nobr>(ECCV 2020 oral)</nobr>
+</div>
+
+<div class="main pub">
+Lucy Chai, <strong>David Bau</strong>, Ser-Nam Lim, and Phillip Isola.  <a href="https://chail.github.io/patch-forensics/">What makes fake images detectable?
 Understanding properties that generalize.</a>  <em>Proceedings of the European Conference on Computer Vision.</em> <nobr>(ECCV 2020)</nobr>
 </div>
+
 <div class="main pub">
 Steven Liu, Tongzhou Wang, <strong>David Bau</strong>, Jun-Yan Zhu, and Antonio Torralba. <a href="http://selfcondgan.csail.mit.edu/">Diverse Image Generation via Self-Conditioned GANs.</a>  <em>Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition.</em> <nobr>(CVPR 2020)</nobr>
 </div>
+
 <div class="main pub">
 <strong>David Bau</strong>, Jun-Yan Zhu, Jonas Wulff, William Peebles, Hendrik Strobelt, Bolei Zhou, and Antonio Torralba. <a href="http://ganseeing.csail.mit.edu/">Seeing What a GAN Cannot Generate.</a>  <em>Proceedings of the IEEE International Conference on Computer Vision, pp. 4502-4511.</em> (ICCV 2019 oral presentation)
 </div>
+
 <div class="main pub">
 <strong>David Bau</strong>, Hendrik Strobelt, William Peebles, Jonas Wulff, Bolei Zhou, Jun-Yan Zhu, and Antonio Torralba. <a href="http://ganpaint.io/">Semantic Photo Manipulation with a Generative Image Prior.</a> <em>ACM Transactions on Graphics (TOG) 38, no. 4.</em> <nobr>(SIGGRAPH 2019)</nobr>
 </div>
+
 <div class="main pub">
   Didac Suris, Adria Recasens, <strong>David Bau</strong>, David Harwath, James Glass, and Antonio Torralba. <a href="https://github.com/surisdi/learning-by-drawing">Learning words by drawing images.</a> <em>Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition.</em>  <nobr>(CVPR 2019)</nobr>
 </div>
+
 <div class="main pub">
 <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Bolei Zhou, Joshua B. Tenenbaum, William T. Freeman, and Antonio Torralba. <a href="http://gandissect.csail.mit.edu/">GAN Dissection: Visualizing and Understanding Generative Adversarial Networks.</a> <em>Proceedings of the Seventh International Conference on Learning Representations.</em> <nobr>(ICLR 2019)</nobr>
 </div>
+
+<div class="main pub">
+David Weintrop, <strong>David Bau</strong>, and Uri Wilensky. <a href="https://ccl.northwestern.edu/2019/cloud.pdf">The cloud is the limit: A case study of programming on the web, with the web.</a> <em>International Journal of Child-Computer Interaction 20.</em> <nobr>(IJCCI 2019)</nobr>
+</div>
+
 <div class="main pub">
 Leilani H. Gilpin, <strong>David Bau</strong>, Ben Z. Yuan, Ayesha Bajwa, Michael Specter, Lalana Kagal.  <a href="https://arxiv.org/pdf/1806.00069.pdf">Explaining Explanations: An Overview of Interpretability of Machine Learning.</a> <em>Proceedings of the IEEE 5th International Conference on Data Science and Advanced Analytics.</em> <nobr>(DSAA 2018)</nobr>
 </div>
+
 <div class="main pub">
 Bolei Zhou, Yiyou Sun, <strong>David Bau</strong>, and Antonio Torralba. <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Antonio_Torralba_Interpretable_Basis_Decomposition_ECCV_2018_paper.pdf">Interpretable Basis Decomposition for Visual Explanation.</a> <em>Proceedings of the European Conference on Computer Vision.</em> <nobr>(ECCV 2018)</nobr>
 </div>
+
 <div class="main pub"><strong>David Bau</strong>, Bolei Zhou, Aditya Khosla, Aude Oliva, Antonio Torralba.  <a href="http://netdissect.csail.mit.edu/">Network Dissection: Quantifying Interpretability of Deep Visual Representations</a>. <em>Proceedings of the 2017 IEEE Conference on Computer Vision and Pattern Recognition</em> <nobr>(CVPR 2017 oral presentation)</nobr></div>
 
 <div class="main pub"><strong>David Bau</strong>, Matt Dawson M, Anthony Bau, C.S. Pickens <a href="http://dl.acm.org/citation.cfm?id=2771875">Pencil Code: Block Code for a Text World</a>. <em>Proceedings of the 14th International Conference on Interaction Design and Children. pp 445-448.</em> <nobr>(IDC 2015)</nobr></div>
@@ -243,6 +260,11 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 </div>
 
 <h3 class="main">Journal Articles</h3>
+
+<div class="main pub">
+Lindsay, Grace W., and <strong>David Bau</strong>. <a href="https://www.sciencedirect.com/science/article/pii/S1389041723000906">Testing methods of neural systems understanding.</a> <em>Cognitive Systems Research (2023): 101156.</em>
+</div>
+
 <div class="main pub">
   <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Agata Lapedriza, Bolei Zhou, and Antonio Torralba. <a href="https://doi.org/10.1073/pnas.1907375117">Understanding the role of individual units in a deep neural network.</a> <em> Proceedings of the National Academy of Sciences (PNAS), Volume 117, no. 48, December 1 2020, pp. 30071-30078.</em>
 </div>
@@ -259,6 +281,9 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 
 <h3 class="main">Workshop Papers</h3>
 
+<div class="main pub">
+Xander Davies, Max Nadeau, Nikhil Prakash, Tamar Rott Shaham, <strong>David Bau</strong>. <a href="https://arxiv.org/abs/2307.03637">Discovering Variable Binding Circuitry with Desiderata.</a> <em>Workshop on Challenges in Deployable Generative AI</em> <nobr>(ICML 2023 Workshop)</nobr>
+</div>
 <div class="main pub">
 <strong>David Bau</strong>, Steven Liu, Tongzhou Wang, Jun-Yan Zhu, Antonio Torralba
 <a href="https://neurips2020creativity.github.io/">Horses With Blue Jeans - Creating New Worlds by Rewriting a GAN.</a> <em>4th Workshop on Machine Learning for Creativity and Design</em> <nobr>(NeurIPS 2020 Workshop)</nobr>
