--- a/src/index.html
+++ b/src/index.html
@@ -252,7 +252,7 @@ student or postdoc.
 <a href="publications.html">Publication List</a>. (PNAS; NeurIPS; ICLR; TPAMI; CVPR; SIGGRAPH; ECCV; ICCV.)
 <br>
 <a href="cv.html">Curriculum Vitae</a>.
-(PhD MIT EECS, <a href="https://dissection.csail.mit.edu/">thesis</a>; Cornell; Harvard; Google; Microsoft.)
+(PhD MIT EECS, <a href="http://dissection.csail.mit.edu/">thesis</a>; Cornell; Harvard; Google; Microsoft.)
 <br>
 Publication pages on
 <a href="http://dblp.uni-trier.de/pers/hd/b/Bau:David">Dblp</a>
