Add new lab members.

--- a/src/index.html
+++ b/src/index.html
@@ -273,6 +273,22 @@ My office at MIT:
 <h2 class="mt-4 mb-3">Lab Members</h2>
 <input class="collapse" type="checkbox">
 <p class="people">
+<a href="https://github.com/davatk">
+<img src="people/davidatkinson.jpg">
+David Atkinson
+</a>
+<a href="https://www.linkedin.com/in/sheridan-feucht/">
+<img src="people/sheridan.jpg">
+Sheridan Feucht
+</a>
+<a href="https://www.linkedin.com/in/arthur-conmy-a029211a8/">
+<img src="people/arthur.jpg">
+Arthur Conmy
+</a>
+<a href="https://rohitgandikota.github.io/">
+<img src="people/rohit.jpg">
+Rohit Gandikota
+</a>
 <a href="https://arnab-api.github.io/">
 <img src="people/arnab.jpg">
 Arnab Sen Sharma
@@ -293,14 +309,21 @@ Nikhil Prakash
 <img src="people/jaden.jpg">
 Jaden Fiotto-Kaufman
 </a>
-<a href="https://rohitgandikota.github.io/">
-<img src="people/rohit.jpg">
-Rohit Gandikota
+<a href="https://aaronmueller.github.io/">
+<img src="people/aaron.jpg">
+Aaron Mueller
 </a>
+</a>
+<a href="https://www.lesswrong.com/users/sam-marks">
+<img src="people/sam.jpg">
+Sam Marks
+</a>
+<!--
 <a href="https://mengk.me/">
 <img src="people/kevin.jpg">
 Kevin Meng
 </a>
+-->
 </p>
 </div>
 </div>
