Update lab members.

--- a/src/index.html
+++ b/src/index.html
@@ -318,6 +318,10 @@ Aaron Mueller
 <img src="people/sam.jpg">
 Sam Marks
 </a>
+<a href="https://www.linkedin.com/in/william-brockman/">
+<img src="people/will.jpg">
+Will Brockman
+</a>
 <!--
 <a href="https://mengk.me/">
 <img src="people/kevin.jpg">
