Update pub link.

--- a/src/students.html
+++ b/src/students.html
@@ -183,7 +183,7 @@ interests.</p>
 </p>
 
 <p>Am I the right advisor for you?
-My <a href="http://davidbau.com/research/publications.html">previous publications</a>
+My <a href="publications.html">previous publications</a>
 give you a sense for what research in my lab is about.
 Also, in 2021 I did an
 <a href="https://www.reddit.com/r/IAmA/comments/r5vte5/i_am_david_bau_and_i_study_the_structure_of_the/">AMA on Reddit</a>
