--- a/src/cv.html
+++ b/src/cv.html
@@ -274,7 +274,7 @@ innovative programming tool project.
 <h3 class="main">Journals</h3>
 
 <div class="main pub">
-Lindsay, Grace W., and <strong>David Bau</strong>. <a href="https://www.sciencedirect.com/science/article/pii/S1389041723000906">Testing methods of neural systems understanding.</a> <em>Cognitive Systems Research (2023): 101156.</em>
+Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedirect.com/science/article/pii/S1389041723000906">Testing methods of neural systems understanding.</a> <em>Cognitive Systems Research (2023): 101156.</em>
 </div>
 
 <div class="main pub">
