Add some talks.

--- a/src/cv.html
+++ b/src/cv.html
@@ -475,7 +475,11 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
-
+<div class="main pub"><em>Causal Explanations, Direct Model Editing, and Real-World Impact</em>Invited Talk at the Toyota Technology Insttitute at Chicago, October 2023.</div>
+<div class="main pub"><em>Three Ideas on Interpretbability of Big ML Models</em>Invited Talk at the Machine Learning Department Seminar, Carnegie Mellon University, October 2023.</div>
+<div class="main pub"><em>Big Questions and Terrifying Tea</em>Invited Talk at the MIT CSAIL 20/60 Anniversary Celebration, July 2023.</div>
+<div class="main pub"><em>How Can we Avoid a Decades-Long Delay in Interpretable AI?</em>Talk at the Workshop on Human-Level AI, June 2023.</div>
+<div class="main pub"><em>Locating and Editing the Facts in a Big Network.</em> Invited Talk at the Center for Human-Compatible AI Workshop, Asilomar CA, June 2023.</div>
 <div class="main pub"><em>AI Safety and the Need for National Deep Inference infrastructure.</em> Invited Talk at the MIT/Harvard AI Safety Retreat, March 2023.</div>
 <div class="main pub"><em>The ROME and MEMIT methods.</em> Invited Talk at the Google ML Research Seminar, January 2023.</div>
 <div class="main pub"><em>AI Alignment, Model Interpretation, and Direct Model Editing.</em> Invited Talk at the Harvard AI Alignment Team, January 2023.</div>
