Fix some errors.

--- a/src/index.html
+++ b/src/index.html
@@ -478,6 +478,40 @@ Prof. Arvind Satyanarayan
 
 <input class="collapse" type="checkbox">
 <p>
+<img src="fv-thumb.png" class="projpic">
+<a href="http://functions.baulab.info/">Function Vectors in Large Language Models.</a>
+  The idea of treating a function reference as data is one of the most powerful
+  concepts in computer science, enabling complex computational forms.
+  Do neural networks learn to represent functions as data?
+  In this paper, we study in-context-learning inside large transformer
+  language models and show evidence that vector representations of
+  functions appear.
+<span class="more"></span>
+<span class="extra">
+  Function vectors (FVs) emerge when a language model generalizes
+  a list of demonstrations of input-output pairs (that is called
+  in-context learning, ICL).  To study how ICL works, we apply
+  causal mediation analysis to identify attention heads
+  that transport information that determines the task to execute.
+  This analysis reveals a small number of attention heads that transport
+  a vector which we call a <em>function vector</em> (FV), that
+  generically encodes the task. We study the properties of FVs,
+  finding that they can trigger execution of the function when
+  injected into very different contexts including natural text.
+  We find that FVs seem to directly encode the word embeddings
+  of the output space, but that they also triggers nontrivial
+  transformer calculations that differ from word-vector arithmetic.
+  FVs are able to obey semantic vector algebra, but rather than
+  operating on word embeddings, they enable compositions of
+  function execution.
+</span>
+<a href="https://arxiv.org/abs/2310.15213"
+   >E Todd, M L Li, A Sen Sharma, A Mueller, B C Wallace, <span class="me">D Bau</span>.
+   <em>Function Vectors in Large Language Models.</em> 2023. arXiv preprint arXiv:2310:15213.</a>
+</p>
+
+<input class="collapse" type="checkbox">
+<p>
 <img src="unified.png" class="projpic">
 <a href="http://unified.baulab.info/">Unified Concept Editing in Diffusion Models.</a>
   Text-to-image diffusion models such as Stable Diffusion have many issues
@@ -503,7 +537,7 @@ Prof. Arvind Satyanarayan
 </span>
 <a href="https://arxiv.org/abs/2308.14761"
    >R Gandikota, H Orad, Y Belinkov, J Materzy&nacute;ska, <span class="me">D Bau</span>.
-   <em>Unified Concept Editing in Diffusion Models.</em> 2023. arXiv preprint arXiv:2308:14761</a>
+   <em>Unified Concept Editing in Diffusion Models.</em> WACV 2024.</a>
 </p>
 
 <input class="collapse" type="checkbox">
