--- a/src/index.html
+++ b/src/index.html
@@ -489,8 +489,8 @@ Prof. Arvind Satyanarayan
 <span class="more"></span>
 <span class="extra">
   Function vectors (FVs) emerge when a language model generalizes
-  a list of demonstrations of input-output pairs (that is called
-  in-context learning, ICL).  To study how ICL works, we apply
+  a list of demonstrations of input-output pairs (via in-context
+  learning, ICL).  To study how ICL works, we apply
   causal mediation analysis to identify attention heads
   that transport information that determines the task to execute.
   This analysis reveals a small number of attention heads that transport
@@ -499,7 +499,7 @@ Prof. Arvind Satyanarayan
   finding that they can trigger execution of the function when
   injected into very different contexts including natural text.
   We find that FVs seem to directly encode the word embeddings
-  of the output space, but that they also triggers nontrivial
+  of the output space, and that they also trigger nontrivial
   transformer calculations that differ from word-vector arithmetic.
   FVs are able to obey semantic vector algebra, but rather than
   operating on word embeddings, they enable compositions of
