--- a/src/cv.html
+++ b/src/cv.html
@@ -293,6 +293,10 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 <h3 class="main">Conference papers</h3>
 
 <div class="main pub">
+  Rohit Gandikota, Hadas Orgad, Yonatan Belinkov, Joanna Materzy&nacute;ska, <strong>David Bau</strong>. <a href="https://unified.baulab.info/">Unified Concept Editing in Diffusion Models.</a> <em>Proceedings of the 2024 IEEE/CVF Winter Conference on Applications of Computer Vision.</em> <nobr>(WACV 2024)</nobr>
+</div>
+
+<div class="main pub">
   Sarah Schwettmann, Tamar Rott Shaham, Joanna Materzy&nacute;ska, Neil Chowdhury, Shuang Li, Jacob Andreas, <strong>David Bau</strong>, and Antonio Torralba. <a href="https://arxiv.org/abs/2309.03886" >A Function Interpretation Benchmark for Evaluating Interpretability Methods</a> <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2023)</nobr>.
 </div>
 
